Lab12 Creating ZaloStation/solution/assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

* {
    margin: 0;
    padding: 0;
    font-family: 'Poppins', sans-serif;
}

.header {
    width: 100%;
    padding-top: 30px;
    padding-bottom: 30px;
    border-bottom: 1px solid #c2c2c2 !important;
}

.logo {
    float: left;
}

.menu {
    float: right;
}

.menu ul li {
    float: left;
    list-style: none;
    padding-right: 20px;
}

.menu ul li a {
    text-decoration: none;
    color: #666;
    text-transform: capitalize;
    font-size: 18px;
    letter-spacing: 1px;
    font-weight: 400;
}

.menu ul li a:hover {
    color: #6c63ff
}

/* GENERIC LAYOUT CLASSES
********************************** */
.container {
    max-width: 1366px;
    min-width: 540px;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
}

.container-full {
    width: 100%;
    margin-right: auto;
    margin-left: auto;
}

/* ********************************* */


#hero-content {
    width: 100%;
    padding-top: 100px;
    padding-bottom: 100px;
}

#hero-content .textBox {
    max-width: 750px;
    float: left;
}

#hero-content .textBox h3 {
    color: #e06100;
    text-transform: capitalize;
    font-size: 32px;
    font-weight: 500;
}

#hero-content .textBox h2 {
    color: #5a64ed;
    text-transform: capitalize;
    font-size: 42px;
    font-weight: 600;
}

#hero-content .textBox p {
    font-size: 18px;
    line-height: 2em;
    padding-bottom: 40px;
}

#hero-content .imgBox {
    display: block;
    float: right;
}

a.btn {
    margin-top: 50px;
}

a.btn {
    background-color: #5a64ed;
    padding: 20px 40px;
    text-decoration: none;
    color: white;
    border-radius: 30px;
}

a.btn:hover {
    background-color: #6c63ff;
}

